# taipo

./: .gitignore  Cargo.toml  README.md  build.rs  settings.json  shell.nix
.cargo/: config.toml
src/: audio.rs  bass_bindings.rs  bass_wrapper.h  database.rs  game.rs  main.rs  notes.txt  parser.rs  schema.rs  settings.rs
src/bass/: bindings.rs  wrapper.rs
src/parsers/: mod.rs  osu.rs  parser.rs
src/scenes/: config.rs  help.rs  main.rs  map.rs  mod.rs  playing.rs  score.rs  select.rs  settings.rs
