[package]
name = "taipo"
version = "0.1.0"
authors = ["Michael Millwood <imanotgate@gmail.com>"]
edition = "2018"

[dependencies]
glob = "0.3.0"
rayon = "1.3.0"
libc = "0.2"
diesel = { version = "1.4.4", features = ["sqlite"] }
ggez = { version="0.5.1", default-features = false }
nalgebra = {version = "0.21.0", default-features = false, features = ["mint"] }


[build-dependencies]
bindgen = "0.53.2"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 3